--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,9 @@ jobs:
         go-version: 1.20
 
     - name: Build
-      run: go build -v ./...
+      run: |
+        go run tidy
+        go build -v ./...
 
     - name: Test
       run: go test -v ./...
