--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,16 +16,11 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Go Dependency Submission
+      uses: actions/go-dependency-submission@v1.0.2
+
     - name: Set up Go
-      uses: actions/setup-go@v3
+      uses: actions/setup-go@v3.5.0
       with:
-        go-version: 1.20
-
-    - name: Install dependencies
-      run: go get .
-
-    - name: Build
-      run: go build -v ./...
-
-    - name: Test
-      run: go test -v ./...
+        go-mod-path: go.mod
+        go-build-target: main.go
