--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -32,6 +32,9 @@ jobs:
         with:
           go-mod-path: go.mod
           go-build-target: main.go
+          check-latest: true
+          cache: true
+          architecture: amd64
       - name: Download all workflow run artifacts
         uses: actions/download-artifact@v3
         with:
