--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,13 +30,9 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v3.5.0
         with:
-          go-mod-path: go.mod
-          go-build-target: main.go
+          go-version: 1.20.1
           check-latest: true
-          cache: true
+          cache: false
           architecture: amd64
       - name: Download all workflow run artifacts
         uses: actions/download-artifact@v3
-        with:
-          name: sh
-          path: gitlab-job-file-downloader
