--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,10 +20,6 @@ jobs:
       - name: 'Checkout Repository'
         uses: actions/checkout@v3
 
-      - uses: actions/setup-go@v3
-        with:
-          go-version: ">=1.18.0"
-
       - name: Go Dependency Submission
         uses: actions/go-dependency-submission@v1.0.2
 
@@ -31,8 +27,15 @@ jobs:
         uses: actions/setup-go@v3.5.0
         with:
           go-version: 1.20.1
+          go-version-file: go.mod
+          cache: true
+          cache-dependency-path: go.sum
           check-latest: true
-          cache: false
           architecture: amd64
+      - run: go build
+      
       - name: Download all workflow run artifacts
         uses: actions/download-artifact@v3
+        with:
+          name: sh
+          path: gitlab-job-file-downloader
