--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -32,7 +32,10 @@ jobs:
           cache-dependency-path: go.sum
           check-latest: true
           architecture: amd64
-      - run: go build
+      - run: go build -o gitlab-job-file-downloader
       
       - name: Download all workflow run artifacts
         uses: actions/download-artifact@v3
+        with:
+          name: sh
+          path: gitlab-job-file-downloader
