--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,16 +26,12 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v3.5.0
         with:
-          go-version: 1.20.1
-          go-version-file: go.mod
+          go-version: latest
           cache: true
           cache-dependency-path: go.sum
           check-latest: true
           architecture: amd64
-      - run: go build -o gitlab-job-file-downloader
+      - run: go build -C ~/ -o gitlab-job-file-downloader
       
       - name: Download all workflow run artifacts
         uses: actions/download-artifact@v3
-        with:
-          name: sh
-          path: gitlab-job-file-downloader
