--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -33,5 +33,10 @@ jobs:
           architecture: amd64
       - run: go build -o gitlab-job-file-downloader
       
+      - name: Accidentally upload to the same artifact via multiple jobs
+        uses: actions/upload-artifact@v3
+        with:
+            name: my-artifact
+            path: ${{ github.workspace }}
       - name: Download all workflow run artifacts
         uses: actions/download-artifact@v3
