--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,7 +2,7 @@ name: Go Dependency Submission
 on:
   push:
     branches:
-      - go-build-test
+      - main
 
 # The API requires write permission on the repository to submit dependencies
 permissions:
