--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,23 @@
 name: Go Build
 on:
+  workflow_dispatch:
+  pull_request:
+    types: [opened, edited, reopened]
   push:
     branches:
       - main
-      - workflows
 
-# The API requires write permission on the repository to submit dependencies
 permissions:
   contents: write
 
-# Environment variables to configure Go and Go modules. Customize as necessary
-env:
-  GOPROXY: '' # A Go Proxy server to be used
-  GOPRIVATE: '' # A list of modules are considered private and not requested from GOPROXY
-
 jobs:
-  go-build-linux-amd64:
-    name: Build Linux amd64
-    runs-on: ubuntu-latest
+  build:
+    name: Build
+    strategy:
+      matrix:
+        go-version: ['stable', 'oldstable']
+        os: [ubuntu-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -33,41 +33,18 @@ jobs:
           cache-dependency-path: go.sum
           check-latest: true
           architecture: amd64
-      - run: go build -o gitlab-job-file-downloader
-  upload-artifact:
-    name: Upload Artifacts
-    runs-on: ubuntu-latest
-    needs: go-build-linux-amd64
-    steps:
-      - name: Accidentally upload to the same artifact via multiple jobs
+      - run: go build -C ./build/
+      - name: Upload Artifacts
         uses: actions/upload-artifact@v3
         with:
-            name: sh-artifact
-            path: ${{ github.workspace }}
-  analyze:
-    name: Analyze
+            name: build-files
+            path: ${{ github.workspace }}/build/
+  deploy:
+    name: Deploy
+    needs: build
     runs-on: ubuntu-latest
-    needs: go-build-linux-amd64
-    permissions:
-      actions: read
-      contents: read
-      security-events: write
-
-    strategy:
-      fail-fast: false
-      matrix:
-        language: [ 'go' ]
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
-
-    # Initializes the CodeQL tools for scanning.
-    - name: Initialize CodeQL
-      uses: github/codeql-action/init@v2
-      with:
-        languages: ${{ matrix.language }}
-
-    - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v2
-      with:
-        category: "/language:${{matrix.language}}"
+      - name: Get build project
+        uses: actions/download-artifact@v3
+        with:
+            name: build-files
