--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Go Build
+name: Build and Deploy
 on:
   workflow_dispatch:
   pull_request:
@@ -29,17 +29,17 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v3.5.0
         with:
-          go-version: 'stable'
+          go-version: ${{ matrix.go-version }}
           cache: true
           cache-dependency-path: go.sum
           check-latest: true
           architecture: amd64
-      - run: go build -o ${{ github.workspace }}/build/
+      - run: go build -ldflags "-s -w" -o build/${{ matrix.os }}-go-${{ matrix.go-version }}-amd64
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
         with:
             name: build-files
-            path: ${{ github.workspace }}/build/
+            path: build/
   deploy:
     name: Deploy
     needs: build
