--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,8 @@ jobs:
           cache-dependency-path: go.sum
           check-latest: true
           architecture: amd64
-      - run: go build -ldflags "-s -w" -o build/${{ matrix.os }}-go-${{ matrix.go-version }}-amd64
+
+      - run: go build -ldflags "-s -w" -o build/
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
         with:
