--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy
+name: Build & Deploy
 on:
   workflow_dispatch:
   pull_request:
@@ -16,8 +16,7 @@ jobs:
     name: Build
     strategy:
       matrix:
-        go-version: ['stable', 'oldstable']
-        os: [ubuntu-latest, windows-latest]
+        os: ['ubuntu-latest', 'windows-latest', 'macos-latest']
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout repository
@@ -29,7 +28,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v3.5.0
         with:
-          go-version: ${{ matrix.go-version }}
+          go-version: 'stable'
           cache: true
           cache-dependency-path: go.sum
           check-latest: true
