--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
     strategy:
       matrix:
         os: ['ubuntu-latest', 'windows-latest', 'macos-latest']
+        go-version: ['stable', 'oldstable']
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout repository
@@ -28,13 +29,15 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v3.5.0
         with:
-          go-version: 'stable'
+          go-version: ${{ matrix.go-version }}
           cache: true
           cache-dependency-path: go.sum
           check-latest: true
           architecture: amd64
-
-      - run: go build -ldflags "-s -w" -o build/
+          if: matrix.os == 'windows-latest'
+            - run: go build -ldflags "-s -w" -o build/${{ matrix.os }}-go-${{ matrix.go-version }}-amd64.exe
+          if: matrix.os != 'windows-latest'
+            - run: go build -ldflags "-s -w" -o build/${{ matrix.os }}-go-${{ matrix.go-version }}-amd64
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
         with:
