--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,8 +36,7 @@ jobs:
           architecture: amd64
           if: ${{ matrix.os }} == windows-latest'
           run: go build -ldflags "-s -w" -o build/${{ matrix.os }}-go-${{ matrix.go-version }}-amd64.exe
-          if: ${{ matrix.os }} != windows-latest'
-          run: go build -ldflags "-s -w" -o build/${{ matrix.os }}-go-${{ matrix.go-version }}-amd64
+      - run: go build -ldflags "-s -w" -o build/${{ matrix.os }}-go-${{ matrix.go-version }}-amd64
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
         with:
