--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
           cond: ${{ matrix.os == 'windows-latest' }}
           if_true: "go build -ldflags "-s -w" -o build/${{ matrix.os }}-go-${{ matrix.go-version }}-amd64.exe"
           if_false: "go build -ldflags "-s -w" -o build/${{ matrix.os }}-go-${{ matrix.go-version }}-amd64"
-      - run: ${{ steps.condval.outputs.value }}
+        run: ${{ steps.condval.outputs.value }}
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
         with:
