--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build & Deploy
+name: Build and Deploy
 on:
   workflow_dispatch:
   pull_request:
@@ -16,8 +16,7 @@ jobs:
     name: Build
     strategy:
       matrix:
-        os: ['ubuntu-latest', 'windows-latest', 'macos-latest']
-        go-version: ['stable', 'oldstable']
+        os: ['ubuntu-latest', 'windows-latest']
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout repository
