--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
           cache-dependency-path: go.sum
           check-latest: true
           architecture: amd64
-      - run: go run build -o build/
+      - run: go build -o build/
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
         with:
